--- a/app.json
+++ b/app.json
@@ -3,6 +3,10 @@
     "name": "netShield",
     "slug": "net-shield",
     "version": "1.0.0",
+    "packagerOpts": {
+      "config": "metro.config.js",
+      "sourceExts": ["js", "jsx", "css"]
+    },
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
