--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "react-native": "0.72.6",
     "react-native-css-transformer": "^1.2.4",
     "react-native-paper": "^5.11.1",
-    "react-native-web": "~0.19.6"
+    "react-native-web": "~0.19.6",
+    "react-native-webview": "13.2.2",
+    "react-native-youtube-iframe": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
