--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-native-paper": "^5.11.1",
     "react-native-web": "~0.19.6",
     "react-native-webview": "13.2.2",
-    "react-native-youtube-iframe": "^2.3.0"
+    "react-native-youtube-iframe": "^2.3.0",
+    "expo-dev-client": "~2.4.11"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
